mise en place de la partie nav

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         <li><button type="button">Inscription</button></li>
       </ul>
     </header>
-    <nav></nav>
+    <nav>
+      <a href="#">TECH</a>
+      <a href="#">MODE</a>
+      <a href="#">POLITIQUE</a>
+      <a href="#">SOCIAL</a>
+      <a href="#">BOUTIQUE</a>
+      <a href="#">BLOG</a>
+    </nav>
   </div>
   
 </body>
