--- a/index.html
+++ b/index.html
@@ -1,35 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
       rel="stylesheet"
       media="only screen and(max-width:500px)"
-      href="./css/style.mobile.css"/>
-      <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-  <title>Journal | Acceuil</title>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <h1><a href="#">LE JOURNAL</a></h1>
-      <ul>
-        <li><a href="#">Devenir membre</a></li>
-        <li><a href="#" class="Connexion">Connexion</a></li>
-        <li><button type="button">Inscription</button></li>
-      </ul>
-    </header>
-    <nav>
-      <a href="#">TECH</a>
-      <a href="#">MODE</a>
-      <a href="#">POLITIQUE</a>
-      <a href="#">SOCIAL</a>
-      <a href="#">BOUTIQUE</a>
-      <a href="#">BLOG</a>
-    </nav>
-  </div>
-  
-</body>
+      href="./css/style.mobile.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/5497b031cd.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Journal | Acceuil</title>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1><a href="#">LE JOURNAL</a></h1>
+        <ul>
+          <li><a href="#">Devenir membre</a></li>
+          <li><a href="#" class="Connexion">Connexion</a></li>
+          <li><button type="button">Inscription</button></li>
+        </ul>
+      </header>
+      <nav>
+        <a href="#">TECH</a>
+        <a href="#">MODE</a>
+        <a href="#">POLITIQUE</a>
+        <a href="#">SOCIAL</a>
+        <a href="#">BOUTIQUE</a>
+        <a href="#">BLOG</a>
+      </nav>
+      <section class="content">
+        <article class="big">
+          <img src="./images/bloc-1.jpeg" alt="bloc1" />
+          <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+            necessitatibus minima quibusdam modi ipsa quisquam temporibus,
+            quidem ad obcaecati ducimus totam doloribus corporis repudiandae
+            beatae eos assumenda voluptatem placeat debitis!
+          </p>
+          <h5>Lorem, ipsum.</h5>
+          <em>Oct 23 - 16 min read <i class="fa-solid fa-star"></i> </em>
+        </article>
+
+        <article>
+          <article class="bloc">
+            <img src="./images/bloc-2.jpeg" alt="bloc2" />
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
+              ea nulla sunt harum non repudiandae sed! Nisi rerum itaque
+              corporiseeeeee suscipit quo id, ratione
+            </p>
+            <h5>Lorem, ipsum.</h5>
+            <em>Oct 24 - 45 min read <i class="fa-solid fa-star"></i> </em>
+          </article>
+          <article class="bloc">
+            <img src="./images/bloc-3.jpeg" alt="bloc3" />
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            <h5>Lorem, ipsum.</h5>
+            <em>Oct 25 - 25 min read <i class="fa-solid fa-star"></i></em>
+          </article>
+          <article class="bloc">
+            <img src="./images/bloc-4.jpeg" alt="bloc4" />
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+            <h5>Lorem, ipsum.</h5>
+            <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+          </article>
+        </article>
+
+        <article class="medium">
+          <img src="./images/bloc-5.jpeg" alt="bloc5" />
+          <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+            necessitatibus minima quibusdam modi ipsa quisquam temporibus,
+            quidem ad obcaecati ducimus totam doloribus corporis repudiandae
+            beatae eos assumenda voluptatem placeat debitis!
+          </p>
+          <h5>Lorem, ipsum.</h5>
+          <em>Oct 26 - 7 min read <i class="fa-solid fa-star"></i> </em>
+        </article>
+      </section>
+    </div>
+  </body>
 </html>
