mise en place de la partie content et ads

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#">BLOG</a>
       </nav>
       <section class="content">
-        <article class="big">
+        <article>
           <img src="./images/bloc-1.jpeg" alt="bloc1" />
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
           <p>
@@ -60,6 +60,7 @@
           <article class="bloc">
             <img src="./images/bloc-2.jpeg" alt="bloc2" />
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus
               ea nulla sunt harum non repudiandae sed! Nisi rerum itaque
@@ -71,18 +72,20 @@
           <article class="bloc">
             <img src="./images/bloc-3.jpeg" alt="bloc3" />
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+
             <h5>Lorem, ipsum.</h5>
             <em>Oct 25 - 25 min read <i class="fa-solid fa-star"></i></em>
           </article>
           <article class="bloc">
             <img src="./images/bloc-4.jpeg" alt="bloc4" />
             <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+
             <h5>Lorem, ipsum.</h5>
             <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
           </article>
         </article>
 
-        <article class="medium">
+        <article>
           <img src="./images/bloc-5.jpeg" alt="bloc5" />
           <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
           <p>
@@ -94,6 +97,23 @@
           <h5>Lorem, ipsum.</h5>
           <em>Oct 26 - 7 min read <i class="fa-solid fa-star"></i> </em>
         </article>
+      </section>
+      <section class="ads">
+        <img src="./images/ads.png" alt="ads" />
+        <h1>Lorem ipsum dolor, sit amet consectetur</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas,
+          doloremque?
+        </p>
+        <form>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Adresse Email"
+          />
+          <button>Inscription</button>
+        </form>
       </section>
     </div>
   </body>
