mise en place de la partie vp

--- a/index.html
+++ b/index.html
@@ -115,6 +115,91 @@
           <button>Inscription</button>
         </form>
       </section>
+      <section class="vp">
+       <div class="articles">
+         <h2 class="ligne">Technologie</h2>
+         <article>
+           <img src="./images/bloc-6.jpeg" alt="bloc6">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+         <article>
+           <img src="./images/bloc-7.jpeg" alt="bloc7">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+         <article>
+           <img src="./images/bloc-8.jpeg" alt="bloc8">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+         <h2 class="ligne">MODE</h2>
+         <article>
+           <img src="./images/bloc-9.jpeg" alt="bloc9">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+         <article>
+           <img src="./images/bloc-10.jpeg" alt="bloc10">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+         <article>
+           <img src="./images/bloc-11.jpeg" alt="bloc11">
+           <h3>Lorem ipsum dolor sit amet.</h3>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam excepturi, aliquid quibusdam officia amet a voluptatum fugiat nesciunt nulla voluptatibus.</p>
+           <h5>Lorem, ipsum</h5>
+           <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+         </article>
+       </div>
+       <div class="populaires">
+        <h2 class="ligne">Populaires</h2>
+        <ul>
+          <li>
+            <div>01</div>
+            <div>
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <h5>Lorem, ipsum</h5>
+              <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+            </div>
+          </li>
+          <li>
+            <div>02</div>
+            <div>
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <h5>Lorem, ipsum</h5>
+              <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+            </div>
+          </li>
+          <li>
+            <div>03</div>
+            <div>
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <h5>Lorem, ipsum</h5>
+              <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+            </div>
+          </li>
+          <li>
+            <div>04</div>
+            <div>
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <h5>Lorem, ipsum</h5>
+              <em>Oct 26 - 2 min read <i class="fa-solid fa-star"></i></em>
+            </div>
+          </li>
+        </ul>
+       </div>
+      </section>
     </div>
   </body>
 </html>
